--- a/stage2/task23.html
+++ b/stage2/task23.html
@@ -4,9 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <title> 任务二十三：JavaScript和树（二），难度简单。用JavaScript实践多叉树的遍历</title>
+    <link rel="stylesheet" href="css/task23.css">
 </head>
 
 <body>
+    <div class="one">
+        Super
+        <div class="two">
+            Apple
+            <div class="three">
+                Cow
+                <div class="four">Yellow</div>
+                <div class="four">
+                    Blue
+                    <div class="five">Color</div>
+                    <div class="five">Black</div>
+                    <div class="five">Angela</div>
+                </div>
+            </div>
+            <div class="three">
+                Phone
+            </div>
+            <div class="three">
+                Music
+                <div class="four">Book</div>
+                <div class="four">
+                    School
+                    <div class="five">Pace</div>
+                </div>
+            </div>
+        </div>
+        <div class="two">
+            Orange
+            <div class="three">
+                Human
+                <div class="four">Code</div>
+                <div class="four">Man</div>
+                <div class="four">Sport</div>
+            </div>
+            <div class="three">
+                Woman
+                <div class="four">
+                    Shop
+                    <div class="five">Buy</div>
+                </div>
+                <div class="four">Glass</div>
+            </div>
+        </div>
+        <div class="two">
+            Fish
+        </div>
+    </div>
+    <fieldset id="choose">
+        <legend>选项卡</legend>
+        <button id="DFS">深度优先搜索</button>
+        <button id="BFS">广度优先搜索</button><br>
+        <label for="search">输入想要查找的内容，然后再点击上面的按钮：<input id="search" type="text" value="Cow"></label>
+    </fieldset>
+    <script src="js/task23.js"></script>
 </body>
 
 </html>
