--- a/stage2/task19.html
+++ b/stage2/task19.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <input type="text">
-    <button>左侧入</button>
-    <button>右侧入</button>
-    <button>左侧出</button>
-    <button>右侧出</button>
-    <button>打乱</button>
-    <button>冒泡</button>
-    <button>选择</button>
-    <button>插入</button>
-    <button>快排</button>
-    <ul></ul>
+    <main>
+        <input type="text">
+        <button>左侧入</button>
+        <button>右侧入</button>
+        <button>左侧出</button>
+        <button>右侧出</button>
+        <button>打乱</button>
+        <button>冒泡</button>
+        <button>选择</button>
+        <button>插入</button>
+        <button>快排</button>
+        <ul></ul>
+    </main>
     <script type="text/javascript" src="js/util.js"></script>
     <script type="text/javascript" src="js/task19.js"></script>
 </body>
